--- a/src/components/Dashboard/CardItem/CardItem.css
+++ b/src/components/Dashboard/CardItem/CardItem.css
@@ -40,11 +40,13 @@
 }
 
 .card-item-footer-type {
-    font-size: 1.2rem;
-    font-weight: 500;
+    text-align: center;
+    margin: 0 auto;
+    font-size: 1.5rem;
+    font-weight: 700;
     color: var(--black);
-    margin-top: 2px;
-    margin-right: 4px;
+    /* margin-top: 2px; */
+    /* margin-right: 4px; */
 }
 
 .card-item-footer-amount {
