--- a/src/components/GlobalStyles/GlobalStyles.css
+++ b/src/components/GlobalStyles/GlobalStyles.css
@@ -39,7 +39,7 @@
     --bg-in-site-clinic-box-shadow: url('https://cdn.jiohealth.com/jio-website/home-page/jio-website-v2.2/multi-clinic-bg.svg');
 
     /* font-family */
-    --font-family: 'Barlow', sans-serif;
+    --font-family: 'Quicksand', 'sans-serif' !important;
 }
 
 * {
