--- a/src/components/GlobalStyles/GlobalStyles.css
+++ b/src/components/GlobalStyles/GlobalStyles.css
@@ -1,5 +1,5 @@
 @import 'normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100;200&family=Quicksand:wght@300;400;500;600;700;800;900&display=swap');
 
 /* init var */
 :root {
@@ -54,7 +54,7 @@ html {
 
 /* default */
 body {
-    font-family: var(--font-family);
+    font-family: var(--font-family) !important;
     color: var(--white);
     overflow-y: overlay;
     overflow-x: overlay;
@@ -80,3 +80,27 @@ html *::-webkit-scrollbar-track {
     border-radius: 0;
     background-color: rgba(0, 0, 0, 0);
 }
+
+/* Antd */
+.ant-layout-sider.ant-layout-sider-dark.sidebar {
+    position: sticky;
+    top: 0;
+}
+
+.ant-table-thead {
+    font-size: 1.7rem;
+    font-weight: 800;
+    color: var(--black);
+}
+
+.ant-table-tbody {
+    font-size: 1.6rem;
+    font-weight: 600;
+    color: var(--black);
+}
+
+.ant-menu-title-content {
+    font-size: 1.6rem;
+    font-weight: 600;
+    color: var(--black);
+  }
