updated: fix token; account for doctor

--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -31,8 +31,16 @@
     border: none;
 }
 
-
 .PhoneInputInput:focus {
     border: none;
     outline: none;
+}
+
+.disabled-btn-login {
+    cursor: not-allowed;
+    pointer-events: none;
+}
+
+.enabled-btn-login {
+    cursor: pointer;
 }
