--- a/src/layouts/DefaultLayout/DefaultLayout.css
+++ b/src/layouts/DefaultLayout/DefaultLayout.css
@@ -81,3 +81,28 @@ html *::-webkit-scrollbar-track {
     position: relative;
     background-color: transparent;
 }
+
+/* Logout */
+.admin-header-logout {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.btn-logout {
+    border: none;
+    outline: none;
+    padding: 12px;
+    line-height: 0;
+    margin-top: 16px;
+    font-size: 1.4rem;
+    font-weight: 800;
+    color: red;
+    margin-right: 22px;
+    background-color: transparent;
+}
+
+.btn-logout:hover {
+    color: red !important;
+    opacity: 0.8;
+    transition: all 0.2s;
+}
